--- a/web/themes/custom/customsolent/css/search.css
+++ b/web/themes/custom/customsolent/css/search.css
@@ -263,7 +263,7 @@ button.search-menu-item-icon {
   }
 
   #search-form-container.visible-2l {
-    top: 90px !important;
+    top: 96px !important;
   }
 
   #search-form-container.hidden-2l {
